load("@com_nvidia_isaac//engine/build:isaac.bzl", "isaac_app", "isaac_cc_module")

isaac_cc_module(
    name = "ping_ros",
    srcs = ["ros_pinger.cc"],
    hdrs = ["ros_pinger.hh"],
    visibility = ["//visibility:public"],
    deps = ["//ros:ros"]
    )

isaac_app(
    name = "hello_ros",
    modules = ["//apps/hello_ros:ping_ros"]
    )
