# load("@nvidia_isaac//engine/build:isaac.bzl", "isaac_app", "isaac_cc_module")

# isaac_cc_module(
#     name = "ping_components",
#     srcs = ["ping_codelet.cpp"],
#     hdrs = ["ping_codelet.hpp"],
#     visibility = ["//visibility:public"],
#     )

# isaac_app(
#     name = "ping",
#     data = ["fast_ping.json"],
#     modules = [
#         "//apps/simulator_demo:ping_components",
#         ],
#     )
